# promoter_autoencoder

./: .gitignore  LICENSE  pyproject.toml  utils.py
code/: data_encoding.py  data_preprocessing.py  vae_definition.py
data/: ecocyc_transcription_units.txt  promoter_sequences.csv
