[tool.poetry]
name = "promoter-autoencoder"
version = "0.1.0"
description = ""
authors = ["gchure <griffinchure@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
pandas = "^2.2.2"
scikit-image = "^0.24.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.1"
tqdm = "^4.66.4"
torch = "^2.3.1"
torchvision = "^0.18.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
